--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audio_service: ^0.18.16
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
   hive_flutter: ^1.1.0
+  just_audio: ^0.9.42
+  media_store_plus: ^0.1.3
+  path: ^1.9.0
+  permission_handler: ^11.3.1
   sqflite: ^2.4.1
+  youtube_explode_dart: ^2.3.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
