--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audio_metadata_reader: ^1.1.0
   audio_service: ^0.18.16
   flutter:
     sdk: flutter
@@ -38,10 +39,11 @@ dependencies:
   path: ^1.9.0
   permission_handler: ^11.3.1
   sqflite: ^2.4.1
+  uri_to_file:
+    git:
+      url: https://github.com/niuhuan/uri-to-file-fix.git
+      ref: fix
   youtube_explode_dart: ^2.3.6
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
 
 dev_dependencies:
   flutter_launcher_icons: "^0.14.2"
