--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,12 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   hive_flutter: ^1.1.0
+  intl: ^0.19.0
   just_audio: ^0.9.42
   media_store_plus: ^0.1.3
   path: ^1.9.0
   permission_handler: ^11.3.1
+  postgres: ^3.5.4
   sqflite: ^2.4.1
   uri_to_file:
     git:
